# ChangeLog for media-radio/gpredict
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/gpredict/ChangeLog,v 1.4 2010/11/22 20:01:46 tomjbe Exp $

*gpredict-1.2 (22 Nov 2010)

  22 Nov 2010; Thomas Beierlein <tomjbe@gentoo.org> +gpredict-1.2.ebuild:
  Version bump.

  04 Sep 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> gpredict-1.1.ebuild:
  x86 stable wrt bug #335264

  31 Aug 2010; Markos Chandras <hwoarang@gentoo.org> gpredict-1.1.ebuild:
  Stable on amd64 wrt bug #335264

*gpredict-1.1 (13 Jul 2010)

  13 Jul 2010; Thomas Beierlein <tomjbe@gentoo.org> +gpredict-1.1.ebuild,
  +files/gpredict-1.1-doc.patch, +metadata.xml:
  Initial portage version. Moved from sunrise. Bug #125342
