@@ -1,7 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA512
+
 AUX gpredict-1.1-doc.patch 593 RMD160 ad7dae7f3e7cda3df83052a53f532383b8828e99 SHA1 6e2396f37e98cb65fbacdffb58003ee4e949d660 SHA256 a02ee94f3f2b12bf2aec6eeaa0645a7a353cb683d2f1ab9474e7455a631a9ed2
 DIST gpredict-1.1.tar.gz 4101711 RMD160 a84656a7ad0589b101bb7c30282aa70766c48c06 SHA1 c1517cd439e09b28912664a968fe005b082b8789 SHA256 eb38ce0b961fbf52ce294cd3d648fa97e8db298f96f0fb4dd8ceb960827f6cf9
 DIST gpredict-1.2.tar.gz 4682391 RMD160 91aa180bde14f1c44da1827cb29475bf73b66acd SHA1 adea56e41af7c3f40c64203457f385993acb21c5 SHA256 ff4e4e912ac723eab63ce78876d5a521c29a4abe6d20e98904d483d63d25388a
 EBUILD gpredict-1.1.ebuild 1158 RMD160 fe9aea0f0cc091912b7eb14912855162c13e2416 SHA1 7a27b58cdef87d755bded2ddb50ed78400c73736 SHA256 f23a4ad12833f88ce77674072a7c0d26ea9e1ea7688afef7d65ed72777cc3429
-EBUILD gpredict-1.2.ebuild 1211 RMD160 81a8350fe61259827e0d4e76d281c5b6215835cc SHA1 b5cd8cc414d7859cf231a89405a6993b865a6726 SHA256 42e18e1becfd486a1ab9e4fc4ad7476ec56b4d34c15f63df0058373d3557756b
-MISC ChangeLog 759 RMD160 3a6f08be499497cc9eb4db51c7a60954bc3cfe16 SHA1 66a0eb5a235361a138dee1088de9688987dcd162 SHA256 0846a4b5533e9cf6741194f5e95cd010e858823624793952bed8f2a83cfed987
+EBUILD gpredict-1.2.ebuild 1212 RMD160 f54ae77311327f5c878c65d80c7ed003682128d3 SHA1 33aa8ac8578471b2610648046eaa0246828efe61 SHA256 a94eb38a3fd9291b987e7e5383a4d1299099045dc3764719c6ceb18b4e4894e5
+MISC ChangeLog 870 RMD160 8e4f4e09227d36bd6be46a76bc0d0e189a05823e SHA1 2423658f7fe02623660585e4acee641ce9fb29bd SHA256 f59bf387691e03ce5556634d85c9b1426d1043cf3b14ac960915299009567887
 MISC metadata.xml 257 RMD160 c6f05f5951c1ad7388dd56f4abe0ccdbe23505dd SHA1 e31f6d71d2344810cca782e2accf9058eeb2c1fd SHA256 e52fb7be2e8c1ca2b7ce0066517558a34ee01c9e6340e0a31a053594b9077eda
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBCgAGBQJNPuL8AAoJEPqDWhW0r/LCzIEP/0jy0jemPD7q0Jp5oxflY0Jo
+zPnFHPm04KlC18EKhSKnH/UBFEZgq+RDRBnPPyu9rRaSU0EzlHWpzHNlCz4TP1cz
+7aOjA9kRporozxtI6zWltV5kHxlg7m6H+3NUfoe9y8oQ7t2vUmBFWtyKn9o6ryiY
+7GsspDER0SapTly4ggAFMLMYkjGbomdawgCAuuirqFyO7+dcl7KzrXjab/xG3Uh4
+r1yYLLL8k+OuO0XHssIQ+y6QeeL482g8loqyB30Chu/gMmsvBpukw/ysMvwTymxy
+6bDlv6rx0BehCSni7dMPm/H3/5ulBIQVfvCS2jx+3RjhaO82HDnzznc2FQMj4Unv
+GJ0Ypnear/zcvbOjWgSQJ3wATX5NoVr5Gm8nOlCZnkg/qvSa3rFnEuYZcRjkshM4
+GA38hOwcc0ry4TaLaRmH+WjaDzZUTatW3CVOq1hgcoYyrJGdHWWBR6M9A7fVSZhP
+uhucg+ayMp0y8hNrHd5GHqAQI9odJ5b5RxKKQ+XNjLJO1/nra/HJ5nemZQBP+IZ9
+HaPEBf4HqMhB28xSu0ndQlttoh9HCtKM/8SEQVwzcK2G76GXuITpMc7ckXzp4WFA
+AdEOXLlKAwNeg+v6H8/n/V88sphbiffF79vNB0wZmDxs0/kb6DxwsuLvivZOjytt
+pdEV4YXTMgax2IkHCzcv
+=z0qt
+-----END PGP SIGNATURE-----
